# Chitti_Robo

./: .env.example  README.md  database.json  metadata.json  package-lock.json  package.json  scrub.cjs  server.ts
file-converter-pro-temp/: .gitignore  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  README.md  ROADMAP.md  advanced_conversions.py  build.spec  build_all.ps1  build_installer.ps1  build_quick_check.ps1  config.py  conversion_worker.py  daemon.py  dashboard.py  database.py  donate.py  history.py  main.py  manifest.xml  pyproject.toml  qss_helpers.py  quick_check.py  requirements-dev.txt  requirements.txt  setup.iss  special_events_manager.py  system_notifier.py  theme_manager.py  translations.py  version_info.txt  widgets.py
file-converter-pro-temp/.github/: FUNDING.yml
file-converter-pro-temp/achievements/: __init__.py  achievements_manager.py  achievements_popup.py  achievements_system.py  achievements_ui.py  rank_popup.py
file-converter-pro-temp/app/: __init__.py  logic.py  ui.py
file-converter-pro-temp/automation/: example_automation.toml
file-converter-pro-temp/context_menu/: __init__.py  formats.py  window.py
file-converter-pro-temp/converter/: __init__.py  advanced_db.py  converters.py  html_inline.py
file-converter-pro-temp/dialogs/: __init__.py  batch_convert_dialog.py  batch_rename_dialog.py  compression_dialog.py  conversion_options_dialog.py  merge_order_dialog.py  password_dialog.py  pdf_protection_dialog.py  pdf_to_word_dialog.py  preview_dialog.py  settings_dialog.py  splash_screen.py  split_dialog.py  terms_dialog.py  word_to_pdf_dialog.py
file-converter-pro-temp/languages/: blank.lang  en-revisited.lang  (+5 more)
(+144 files in other folders)
