[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "file-converter-pro"
version = "1.0.6"
description = "Professional file converter with PDF, Word, images, and more"
readme = "README.md"
license = {text = "GNU General Public License v3.0"}
requires-python = ">=3.10"
authors = [
    {name = "Hyacinthe"},
]

dependencies = [
    "PySide6>=6.10",
    "PyMuPDF>=1.26",
    "pypdf>=6.9",
    "pdf2docx>=0.5",
    "pdfkit>=1.0",
    "reportlab>=4.4",
    "python-docx>=1.2",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "docxcompose>=2.1",
    "Pillow>=12.0",
    "pillow-heif>=1.3",
    "rawpy>=0.27",
    "CairoSVG>=2.9",
    "psd-tools>=1.17",
    "ebooklib>=0.20",
    "lxml>=6.0",
    "numpy>=2.2",
    "pyzipper>=0.3",
    "cryptography>=46.0",
    "matplotlib>=3.10",
    "watchdog>=6.0",
    "APScheduler>=3.11",
    "rich>=14.2",
]

[project.optional-dependencies]
windows = [
    "winotify>=1.1",
    "comtypes>=1.4",
    "pywin32>=311",
]
audio = [
    "playsound3>=3.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["app*", "converter*", "dialogs*", "templates*", "tasks*", "context_menu*", "achievements*", "utils*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
